<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/filter_news"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/font_big"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.nex3z.flowlayout.FlowLayout
        android:id="@+id/categoriesFlowLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        app:flChildSpacing="8dp"
        app:flRowSpacing="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <View
        android:id="@+id/horizontalSeparate"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@color/separate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoriesFlowLayout" />

    <View
        android:id="@+id/verticalSeparate"
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:background="@color/separate"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalSeparate"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/throwOffTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/filter_throw_off"
        android:textStyle="bold"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/font_small"
        android:textAllCaps="true"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/verticalSeparate"
        app:layout_constraintTop_toBottomOf="@id/horizontalSeparate"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/applyTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/filter_to_apply"
        android:textStyle="bold"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/font_small"
        android:textAllCaps="true"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/verticalSeparate"
        app:layout_constraintTop_toBottomOf="@id/horizontalSeparate"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>